# poe-macro

./: Cargo.toml  LICENSE  README.md  build.rs  icon32.rgba
.github/workflows/: build.yaml  check.yaml
src/: config.rs  helper.rs  main.rs  tray_icon.rs
